top gap fix

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ table img {
     width: 30%;
     box-shadow: 0px 5px 15px gray;
     position: sticky;
-    top: 0;
+    top: 16px;
 }
 
 .profile-photo {
